@@ -1,3 +1,6 @@
+* 10-Jul-2012: version 0.2.7:
+    - Added classes MysqlSqlStatementFactory, PgsqlSqlStatementFactory and SqliteSqlStatementFactory
+    
 * 17-Jan-2012: version 0.2.6:
     - SqlStatementFactory now uses Ddth_EhProperties_EhProperties instead of Ddth_Commons_Properties
 
